--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -100,9 +100,25 @@
         </div>
       </div>
     </div>
-    <div class="widget PopularPosts" data-version="2" id="PopularPosts1"><div class="widgettitle">Terbaik Minggu Ini</div><div class="widget-content"><div class="popular-post-feed"><article aria-label="Cara Menambahkan Sitemap Blogger ke Google Search Console" class="post"><h2 class="post-title"><a href="https://maz-daily-id.blogspot.com/2023/09/sitemap-blogger-ke-google.html" title="Cara Menambahkan Sitemap Blogger ke Google Search Console">Cara Menambahkan Sitemap Blogger ke Google Search Console</a></h2>
-    
-    </article><article aria-label="Hello World!" class="post"><h2 class="post-title"><a href="https://maz-daily-id.blogspot.com/2023/09/hello-world.html" title="Hello World!">Hello World!</a></h2></article><article aria-label="Curhat Moment #1" class="post"><h2 class="post-title"><a href="https://maz-daily-id.blogspot.com/2024/03/curhat-moment-1.html" title="Curhat Moment #1">Curhat Moment #1</a></h2></article></div></div></div></div><div class="clear"></div></div>
+    <div class="widget PopularPosts" data-version="2" id="PopularPosts1">
+      <div class="widgettitle">Terbaik Minggu Ini</div>
+      <div class="widget-content">
+        <div class="popular-post-feed">
+          <article aria-label="Cara Menambahkan Sitemap Blogger ke Google Search Console" class="post">
+            <h2 class="post-title"><a href="https://maz-daily-id.blogspot.com/2023/09/sitemap-blogger-ke-google.html" title="Cara Menambahkan Sitemap Blogger ke Google Search Console">Cara Menambahkan Sitemap Blogger ke Google Search Console</a></h2>
+          </article>
+          <article aria-label="Hello World!" class="post">
+            <h2 class="post-title"><a href="https://maz-daily-id.blogspot.com/2023/09/hello-world.html" title="Hello World!">Hello World!</a></h2>
+          </article>
+          <article aria-label="Curhat Moment #1" class="post">
+            <h2 class="post-title"><a href="https://maz-daily-id.blogspot.com/2024/03/curhat-moment-1.html" title="Curhat Moment #1">Curhat Moment #1</a></h2>
+          </article>
+        </div>
+      </div>
+    </div>
+  </div>
+  <div class="clear"></div>
+</div>
 {{ content }}
 </main>
 {% include custom-title.html title="Link Kami" %}
