--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -81,9 +81,6 @@
         <div class="widget-content ads" itemscope="itemscope" itemtype="https://schema.org/WPAdblock">
           <meta content="Iklan ada di sini" itemprop="name">
           <meta content="Iklan ada di sini" itemprop="description">
-          <div class="jalewaads-160x600-banner-ad ads" itemscope="itemscope" itemtype="https://schema.org/WPAdblock">
-            <script src="//display.jalewaads.com/display/items.php?23481&amp;9780&amp;160&amp;600&amp;4&amp;0&amp;0"></script>
-            <div id="adm-container-23481"></div>
           </div>
         </div>
       </div>
@@ -95,8 +92,7 @@
         <meta content="Iklan ada di sini" itemprop="name">
         <meta content="Iklan ada di sini" itemprop="description">
         <div class="jalewaads-300x600-banner-ad ads" itemscope="itemscope" itemtype="https://schema.org/WPAdblock">
-          <script src="//display.jalewaads.com/display/items.php?23480&amp;9780&amp;300&amp;600&amp;4&amp;0&amp;0"></script>
-          <div id="adm-container-23480"></div>
+
         </div>
       </div>
     </div>
@@ -140,6 +136,15 @@
 <li><a href="#" itemprop="url" rel="nofollow noopener noreferrer" target="_blank" title="Theme Preview"><span itemprop="name alternateName">Theme Preview</span></a></li>
 </ul>
 </div>
+<div class="LinkList">
+  <div class="widget-title">Web Tools</div>
+  <ul aria-label="Web Tools" itemscope itemtype="https://schema.org/ListItem"><li><a href="#" itemprop="url" rel="nofollow noopener noreferrer" target="_blank" title="Google Drive Direct Link Generator"><span itemprop="name alternateName">Google Drive Direct Link Generator</span></a></li>
+  <li><a href="#" itemprop="url" rel="nofollow noopener noreferrer" target="_blank" title="Iframe Viewer"><span itemprop="name alternateName">Iframe Viewer</span></a></li>
+  <li><a href="#" itemprop="url" rel="nofollow noopener noreferrer" target="_blank" title="Image Viewer"><span itemprop="name alternateName">Image Viewer</span></a></li>
+  <li><a href="#" itemprop="url" rel="nofollow noopener noreferrer" target="_blank" title="Safelink Converter"><span itemprop="name alternateName">Safelink Converter</span></a></li>
+  <li><a href="#" itemprop="url" rel="nofollow noopener noreferrer" target="_blank" title="Theme Preview"><span itemprop="name alternateName">Theme Preview</span></a></li>
+  </ul>
+  </div>
 </div>
 <div class="four-columns-widget" id="our-link-widget-3">
 <div class="LinkList">
