--- a/_layouts/archive.html
+++ b/_layouts/archive.html
@@ -1,11 +1,5 @@
 ---
 layout: default
+description: Kumpulan artikel dari kategori yang kamu pilih.
 ---
-<ul>
-  {% for post in page.posts %}
-    <li>
-      <a href="{{ post.url | relative_url }}" title='{{ post.title }}'>{{ post.title }}</a>
-      <small>{{ post.date | date: "%b %d, %Y" }}</small>
-    </li>
-  {% endfor %}
-</ul>
+{% include blogpost.html %}
