--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -32,7 +32,7 @@
       <div class="left-sidebar section" id="left-sidebar">
         <div class="widget HTML" data-version="2" id="HTML11">
           <div class="widget-content text-center">
-            <button hidden="" class="button press icon download" id="installWebApp">Install Now</button>
+            <button class="button press icon download" id="installWebApp">Install Now</button>
           </div>
         </div>
         <div class="widget HTML" data-version="2" id="HTML5">
