--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -23,7 +23,7 @@
   <div class="outer-content">
     <div class="main-wrapper">
       <div class="main section" id="main">
-        <div class="widget Blog" data-version="2" id="Blog1">
+        <div class="widget Blog"id="Blog1">
           <div class="blog-posts hfeed container">
             {{ content }}
           </div>
@@ -64,22 +64,14 @@
 </div>
 <div class="four-columns-widget" id="our-link-widget-2">
 <div class="LinkList">
-<div class="widget-title">Web Tools</div>
-<ul aria-label="Web Tools" itemscope itemtype="https://schema.org/ListItem"><li><a href="#" itemprop="url" rel="nofollow noopener noreferrer" target="_blank" title="Google Drive Direct Link Generator"><span itemprop="name alternateName">Google Drive Direct Link Generator</span></a></li>
-<li><a href="#" itemprop="url" rel="nofollow noopener noreferrer" target="_blank" title="Iframe Viewer"><span itemprop="name alternateName">Iframe Viewer</span></a></li>
-<li><a href="#" itemprop="url" rel="nofollow noopener noreferrer" target="_blank" title="Image Viewer"><span itemprop="name alternateName">Image Viewer</span></a></li>
-<li><a href="#" itemprop="url" rel="nofollow noopener noreferrer" target="_blank" title="Safelink Converter"><span itemprop="name alternateName">Safelink Converter</span></a></li>
-<li><a href="#" itemprop="url" rel="nofollow noopener noreferrer" target="_blank" title="Theme Preview"><span itemprop="name alternateName">Theme Preview</span></a></li>
-</ul>
-</div>
-<div class="LinkList">
-  <div class="widget-title">Web Tools</div>
-  <ul aria-label="Web Tools" itemscope itemtype="https://schema.org/ListItem"><li><a href="#" itemprop="url" rel="nofollow noopener noreferrer" target="_blank" title="Google Drive Direct Link Generator"><span itemprop="name alternateName">Google Drive Direct Link Generator</span></a></li>
-  <li><a href="#" itemprop="url" rel="nofollow noopener noreferrer" target="_blank" title="Iframe Viewer"><span itemprop="name alternateName">Iframe Viewer</span></a></li>
-  <li><a href="#" itemprop="url" rel="nofollow noopener noreferrer" target="_blank" title="Image Viewer"><span itemprop="name alternateName">Image Viewer</span></a></li>
-  <li><a href="#" itemprop="url" rel="nofollow noopener noreferrer" target="_blank" title="Safelink Converter"><span itemprop="name alternateName">Safelink Converter</span></a></li>
-  <li><a href="#" itemprop="url" rel="nofollow noopener noreferrer" target="_blank" title="Theme Preview"><span itemprop="name alternateName">Theme Preview</span></a></li>
-  </ul>
+  <div class="widget-title"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512"><path d="M495.9 166.6c3.2 8.7 .5 18.4-6.4 24.6l-43.3 39.4c1.1 8.3 1.7 16.8 1.7 25.4s-.6 17.1-1.7 25.4l43.3 39.4c6.9 6.2 9.6 15.9 6.4 24.6c-4.4 11.9-9.7 23.3-15.8 34.3l-4.7 8.1c-6.6 11-14 21.4-22.1 31.2c-5.9 7.2-15.7 9.6-24.5 6.8l-55.7-17.7c-13.4 10.3-28.2 18.9-44 25.4l-12.5 57.1c-2 9.1-9 16.3-18.2 17.8c-13.8 2.3-28 3.5-42.5 3.5s-28.7-1.2-42.5-3.5c-9.2-1.5-16.2-8.7-18.2-17.8l-12.5-57.1c-15.8-6.5-30.6-15.1-44-25.4L83.1 425.9c-8.8 2.8-18.6 .3-24.5-6.8c-8.1-9.8-15.5-20.2-22.1-31.2l-4.7-8.1c-6.1-11-11.4-22.4-15.8-34.3c-3.2-8.7-.5-18.4 6.4-24.6l43.3-39.4C64.6 273.1 64 264.6 64 256s.6-17.1 1.7-25.4L22.4 191.2c-6.9-6.2-9.6-15.9-6.4-24.6c4.4-11.9 9.7-23.3 15.8-34.3l4.7-8.1c6.6-11 14-21.4 22.1-31.2c5.9-7.2 15.7-9.6 24.5-6.8l55.7 17.7c13.4-10.3 28.2-18.9 44-25.4l12.5-57.1c2-9.1 9-16.3 18.2-17.8C227.3 1.2 241.5 0 256 0s28.7 1.2 42.5 3.5c9.2 1.5 16.2 8.7 18.2 17.8l12.5 57.1c15.8 6.5 30.6 15.1 44 25.4l55.7-17.7c8.8-2.8 18.6-.3 24.5 6.8c8.1 9.8 15.5 20.2 22.1 31.2l4.7 8.1c6.1 11 11.4 22.4 15.8 34.3zM256 336a80 80 0 1 0 0-160 80 80 0 1 0 0 160z"/></svg> Web Tools</div>
+    <ul aria-label="Web Tools" itemscope itemtype="https://schema.org/ListItem">
+      <li><a href="#" itemprop="url" rel="nofollow noopener noreferrer" target="_blank" title="Google Drive Direct Link Generator"><span itemprop="name alternateName">Google Drive Direct Link Generator</span></a></li>
+      <li><a href="#" itemprop="url" rel="nofollow noopener noreferrer" target="_blank" title="Iframe Viewer"><span itemprop="name alternateName">Iframe Viewer</span></a></li>
+      <li><a href="#" itemprop="url" rel="nofollow noopener noreferrer" target="_blank" title="Image Viewer"><span itemprop="name alternateName">Image Viewer</span></a></li>
+      <li><a href="#" itemprop="url" rel="nofollow noopener noreferrer" target="_blank" title="Safelink Converter"><span itemprop="name alternateName">Safelink Converter</span></a></li>
+      <li><a href="#" itemprop="url" rel="nofollow noopener noreferrer" target="_blank" title="Theme Preview"><span itemprop="name alternateName">Theme Preview</span></a></li>
+    </ul>
   </div>
 </div>
 <div class="four-columns-widget" id="our-link-widget-3">
@@ -92,8 +84,10 @@
 </div>
 <div class="four-columns-widget" id="our-link-widget-4">
 <div class="LinkList">
-<div class="widget-title">Web Tools</div>
-
+<div class="widget-title"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 576 512"><path d="M0 112.5L0 422.3c0 18 10.1 35 27 41.3c87 32.5 174 10.3 261-11.9c79.8-20.3 159.6-40.7 239.3-18.9c23 6.3 48.7-9.5 48.7-33.4l0-309.9c0-18-10.1-35-27-41.3C462 15.9 375 38.1 288 60.3C208.2 80.6 128.4 100.9 48.7 79.1C25.6 72.8 0 88.6 0 112.5zM288 352c-44.2 0-80-43-80-96s35.8-96 80-96s80 43 80 96s-35.8 96-80 96zM64 352c35.3 0 64 28.7 64 64l-64 0 0-64zm64-208c0 35.3-28.7 64-64 64l0-64 64 0zM512 304l0 64-64 0c0-35.3 28.7-64 64-64zM448 96l64 0 0 64c-35.3 0-64-28.7-64-64z"/></svg> Dukung Kami/div>
+  <ul aria-label="Dukungan" itemscope itemtype="https://schema.org/ListItem">
+    <li>Saweria</li>
+  </ul>
 </div>
 </div>
 </aside>
