--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -45,7 +45,7 @@
     </div>
     <div class="right-sidebar section" id="right-sidebar">
       <div class="widget HTML">
-        <div class="widget-content" itemscope="itemscope" itemtype="https://schema.org/WPAdblock">
+        <div class="widget-content" style='width:100%;height:600px;background:var(--grey);color:var(--white);font-size:2rem' itemscope itemtype="https://schema.org/WPAdblock">
           <meta content="Iklan ada di sini" itemprop="name">
           <meta content="Iklan ada di sini" itemprop="description">
         </div>
