--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -19,7 +19,7 @@
 {% include nav.html %}
 {% include top-info.html %}
 {% include leaderboard_ads.html %}
-<main aria-label="Content Wrapper" class="content-wrapper hide-on-print" id="content-wrapper">
+<main aria-label="Main Wrapper" class="content-wrapper hide-on-print" id="content-wrapper">
 {{ content }}
 </main>
 {% include custom-title.html title="Link Kami" %}
