create our links section 4 columns

--- a/_layouts/amp.html
+++ b/_layouts/amp.html
@@ -14,40 +14,10 @@
     {% include nav.html %}
     {% include top-info.html %}
     {% include leaderboard_ads.html %}
-<main aria-label="Content Wrapper" class="content-wrapper hide-on-print" id="content-wrapper">
-  <div class="outer-content">
-    <div class="main-wrapper">
-      <div class="main section" id="main">
-        <div class="widget Blog"id="Blog1">
-          <div class="blog-posts hfeed container">
-            {{ content }}
-          </div>
-        </div>
-      </div>
-      <div class="left-sidebar section" id="left-sidebar">
-        <div class="widget HTML" data-version="2" id="HTML11">
-          <div class="widget-content text-center">
-            <button class="button press icon download" id="installWebApp">Install Now</button>
-          </div>
-        </div>
-        <div class="widget HTML" data-version="2" id="HTML5">
-          <div class="widget-content ads" itemscope="itemscope" itemtype="https://schema.org/WPAdblock">
-            <meta content="Iklan ada di sini" itemprop="name">
-            <meta content="Iklan ada di sini" itemprop="description">
-          </div>
-        </div>
-      </div>
-    </div>
-    <div class="right-sidebar section" id="right-sidebar">
-      <div class="widget HTML">
-        <div class="widget-content" style='width:100%;height:600px;background:var(--grey);color:var(--white);font-size:2rem' itemscope itemtype="https://schema.org/WPAdblock">
-          <meta content="Iklan ada di sini" itemprop="name">
-          <meta content="Iklan ada di sini" itemprop="description">
-        </div>
-      </div>
-    </div>
-    <div class="clear"></div>
-</main>
+    <main aria-label="Main Wrapper" class="content-wrapper hide-on-print" id="content-wrapper">
+    {{ content }}
+    </main>
+    {% include our-links-section.html %}
     {% include footer.html %}
     {% include noprint.html %}
   </body>
