--- a/_includes/style.css
+++ b/_includes/style.css
@@ -102,17 +102,17 @@ body.dark-mode .sidebar{background:var(--theme-color-dark)}
 .sidebar ul{list-style:none;padding:0}
 .sidebar li{padding:15px}
 .sidebar a{color:var(--white);text-decoration:none;display:block;padding:10px;border-radius:5px;transition:background .3s}
-.sidebar a:hover{background:rgba(0, 0, 0, 0.3)}
-.overlay{position:fixed;z-index:3;top:0;left:0;width:100%;height:100%;background:var(--black);opacity:0;visibility:hidden}
+.sidebar a:hover{background:rgba(0, 0, 0, 0.1)}
+.overlay{position:fixed;z-index:3;top:0;left:0;width:100%;height:100%;background:rgba(0, 0, 0, 0.3);opacity:0;visibility:hidden}
 #sidebar-toggle:checked ~ .page-wrapper .sidebar{left:0}
 #sidebar-toggle:checked ~ .page-wrapper .overlay{opacity:1;visibility:visible}
 /* Top Info */
 .top-info{text-align:center;margin-top:100px;text-align:center;position:relative;padding-bottom:20px;margin-bottom:30px}
-.top-info img{width:120px;height:120px;border-radius:50%;object-fit:cover;border:3px solid #004AAD;transition:.3s ease-in-out}
+{% if page.url contains '/amp/' %}.top-info amp-img{% else %}.top-info img{% endif %}{width:120px;height:120px;border-radius:50%;object-fit:cover;border:3px solid var(--theme-color)}
 .top-info h1{font-size:24px;margin:10px 0}
 .top-info p{font-size:16px;max-width:400px;margin:auto;color:#555}
 .top-info .post-label{padding:.5rem}
-body.dark-mode .top-info p{color:#ddd}
+body.dark-mode .top-info p{color:var(--white)}
 .top-info::after{content:'';position:absolute;left:0;bottom:0;width:100%;height:4px;background:linear-gradient(90deg,#ff6f61,#fc0,#4caf50);box-shadow:0 4px 6px #0000001a}
 @media (max-width: 768px) {
 .top-info::after{height:2px;background:linear-gradient(90deg,#4caf50,#ff6f61)}
