--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,25 +1,5 @@
-<footer aria-label='Credit Section' class='full-width-wrapper credit-wrapper hide-on-print' id='credit-wrapper' itemtype='https://www.schema.org/WPFooter'>
+<footer aria-label='Credit Section' id='credit-wrapper' itemtype='https://www.schema.org/WPFooter' class="sidebar-footer">
     <meta content='#credit-wrapper' itemprop='cssSelector'>
-    <div class="badge-slider hide-on-print">
-        <div class="badges">
-            <div class="badge">
-                <a href='https://www.dmca.com/Protection/Status.aspx?ID=aef4ea29-df6f-425f-a92f-c9e401fe0f21&refurl={{ page.url | absolute_url }}' target='_blank' rel='nofollow noopener noreferrer license' title='DMCA.com Protection Status'>
-                    {% include image.html src='https://images.dmca.com/Badges/dmca_protected_26_120.png?ID=aef4ea29-df6f-425f-a92f-c9e401fe0f21' title='DMCA.com Protection Status' width='121' height='57' layout='fixed' %}
-                </a>
-            </div>
-            <div class="badge">
-                <a href='https://pagespeed.web.dev/analysis?url={{ page.url | absolute_url }}' target='_blank' rel='nofollow noopener noreferrer' title='label="PageSpeed Insight Test Result'>
-                    {% include image.html src='https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEhRVtjrjS6D_9yoDu34yrALEmffGq5KTApJGFhSZlAqhYyyP-3G1QsWrNpc-suIs2kiB_H9Mjfzwp8xdFDDyRSIh3sPMmTRtWJGytfA4FQ1z3RnT9kKOUFFrB3wDgDXgMjAwWPOHGMLO2Ejiwdt7HfjhsqZ7tLPE83KTs-RuPmIsZv6DKpyEKFQoEh-H8fh/s100-rw/pagespeed-tested.png' title='Pagespeed Insight' width='121' height='57' layout='fixed' %}
-                </a>
-            </div>
-            <div class="badge">
-                <a href='https://search.google.com/test/amp?url={{ page.url | absolute_url | append: "amp/"}}' target='_blank' rel='nofollow noopener noreferrer' title='PageSpeed Insight Test Result'>
-                    {% include image.html src='https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEi36KmgpB1ofrsc99DLL0nJxyeOKE-I4JRFXj6xJG2Thnf8XGE9xYoP7PeP7Mr9XRHCXrdwuF6EnhfQ0cSTzM7NjsiU6HadeBX0BjabMwmyy2KjJCnPsuGOQbpGxR7QPeVSQ1dUXciUfInKsm2YTzN2PPg3_WDuW4mB6Zf3fiOECA1dhLYXxZo27Nfb0cNT/s100-rw/valid-amphtml.png' title='AMP Validator' width='121' height='57' layout='fixed' %}
-                </a>
-            </div>
-        </div>
-    </div>
-    <p>Dibuat dengan ❤️ oleh <a href='{{ site.url }}' itemprop='url' title='{{ site.title }}'><span itemprop='copyrightHolder name alternateName publisher'>{{ site.author }}</span></a></p>
-    <p><span itemprop='copyrightYear'></span>2023</span>-{{ site.time | date: "%Y" }} &copy; <span itemprop='copyrightNotice'>Hak Cipta Dilindungi.</span></p>
-    <p><small>{% if page.is_amp %}<a href="{{ site.url }}{{ page.url | replace:'/amp/','' }}" title="Versi Asli">Versi Asli</a>{% else %}<a href="{{ site.url }}{{ page.url | replace:'index.html','' }}amp/" title="Versi AMP">Versi AMP</a>{% endif %} - <a href='#' rel='nofollow' title='Kembali ke Atas'>Gulir Ke Atas</a></small></p>
+    <p><span itemprop='copyrightYear'></span>2023</span>-{{ site.time | date: "%Y" }} © <a href='{{ site.url }}' itemprop='url' title='{{ site.title }}'><span itemprop='copyrightHolder name alternateName publisher'>{{ site.author }}</span></a>.</p>
+    <p><span itemprop='copyrightNotice'>Hak Cipta Dilindungi.</span></p>
 </footer>
