--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -1,13 +1,56 @@
-<input type='checkbox' hidden id='sidebar-toggle'>
-<nav itemscope itemtype='https://schema.org/SiteNavigationElement' aria-label='Sidebar Menu' class='page-wrapper hide-on-print'>
-    <div class='sidebar-container'>
-      <div class='sidebar'>
-        <label for='sidebar-toggle' class='close'>&times;</label>
-        <h2>Menu Navigasi</h2>
-        <ul class='menu'>
-            {% for link in site.nav_links %}<li itemprop='name'><a itemprop='url' title='{{ link[0] }}' href='{{ link[1] }}'>{{ link[0] }}</a></li>{% endfor %}
-        </ul>
-        <h2>Bisnis</h2>
-      </div>
-      <label for='sidebar-toggle' class='overlay'></label>
-</nav>
+<nav itemscope itemtype='https://schema.org/SiteNavigationElement' aria-label='Sidebar Menu' class="sidebar hide-on-print">
+  <div class='nav-section'>
+    <ul>
+      <div class="sidebar-heading">Main</div>
+      {% for link in site.nav_links %}<li itemprop='name'><a itemprop='url' title='{{ link[0] }}' href='{{ link[1] }}'>{{ link[0] }}</a></li>{% endfor %}
+  
+      <div class="sidebar-heading">Library</div>
+      <li>History</li>
+      <li>Watch Later</li>
+  
+      <div class="sidebar-heading">Categories</div>
+      <li class="accordion">
+        <input type="radio" name="accordion" id="cat1">
+        <label for="cat1">Technology
+          <svg viewBox="0 0 24 24"><path d="M9 6l6 6-6 6"/></svg>
+        </label>
+        <div class="content">
+          <a href="#">AI</a>
+          <a href="#">Web Dev</a>
+          <a href="#">Blockchain</a>
+        </div>
+      </li>
+      <li class="accordion">
+        <input type="radio" name="accordion" id="cat2">
+        <label for="cat2">Business
+          <svg viewBox="0 0 24 24"><path d="M9 6l6 6-6 6"/></svg>
+        </label>
+        <div class="content">
+          <a href="#">Startups</a>
+          <a href="#">Marketing</a>
+        </div>
+      </li>
+    </ul>
+  <div class="sidebar-section">
+    <div class="sidebar-heading">Follow Us</div>
+    <ul class="sidebar-icons">
+      <li>
+        <a href="https://www.youtube.com/@AsibukaGroup" rel='me nofollow noopener noreferrer' title='YouTube' target="_blank">
+          <svg viewBox="0 0 576 512" aria-hidden="true">
+            <path d="M549.7 124.1c-6.3-23.7-24.8-42.3-48.3-48.6C458.8 64 288 64 288 64S117.2 64 74.6 75.5c-23.5 6.3-42 24.9-48.3 48.6-11.4 42.9-11.4 132.3-11.4 132.3s0 89.4 11.4 132.3c6.3 23.7 24.8 41.5 48.3 47.8C117.2 448 288 448 288 448s170.8 0 213.4-11.5c23.5-6.3 42-24.2 48.3-47.8 11.4-42.9 11.4-132.3 11.4-132.3s0-89.4-11.4-132.3zm-317.5 213.5V175.2l142.7 81.2-142.7 81.2z"/>
+          </svg>
+          YouTube
+        </a>
+      </li>
+    </ul>
+  </div>
+  <div class="sidebar-section text-center">
+  <a href='https://www.dmca.com/Protection/Status.aspx?ID=aef4ea29-df6f-425f-a92f-c9e401fe0f21&refurl={{ page.url | absolute_url }}' target='_blank' rel='nofollow noopener noreferrer license' title='DMCA.com Protection Status'>
+  {% include image.html src='https://images.dmca.com/Badges/dmca_protected_26_120.png?ID=aef4ea29-df6f-425f-a92f-c9e401fe0f21' title='DMCA.com Protection Status' width='121' height='57' layout='fixed' %}
+  </a>
+  </div>
+  </div>
+  {% include footer.html %}
+  </nav>
+  <label for="sidebar-toggle" class="overlay hide-on-print"></label>
+  <label for="search-toggle" class="search-overlay hide-on-print"></label>
