--- a/_layouts/amp.html
+++ b/_layouts/amp.html
@@ -9,16 +9,16 @@
     <script async custom-element="amp-ad" src="https://cdn.ampproject.org/v0/amp-ad-0.1.js"></script>
     {% if content contains "<amp-iframe" %}<script async custom-element="amp-iframe" src="https://cdn.ampproject.org/v0/amp-iframe-0.1.js"></script>{% endif %}
   </head>
-  <body [class]="visible ? 'dark-mode hide-on-print' : 'light-mode hide-on-print'" class='light-mode hide-on-print'>
+  <body [class]="visible ? 'dark hide-on-print' : 'light hide-on-print'" class='light hide-on-print'>
     {% include header.html %}
     {% include nav.html %}
-    {% include top-info.html %}
     {% include leaderboard_ads.html %}
+    <div class="layout hide-on-print">
     <main aria-label="Main Wrapper" class="content-wrapper hide-on-print" id="content-wrapper">
     {{ content }}
     </main>
-    {% include our-links-section.html %}
-    {% include footer.html %}
+    {% include right-sidebar.html %}
+    </div>
     {% include noprint.html %}
   </body>
 </html>
