--- a/_includes/style.css
+++ b/_includes/style.css
@@ -71,7 +71,7 @@
     .overlay,.search-overlay{display:none;position:fixed;top:0;left:0;right:0;bottom:0;background:var(--black)00080;z-index:999}
     /* Content Layout */
     .layout{display:flex;flex-direction:row;min-height:100vh}
-    .content-wrapper{padding:.5rem;transition:margin-left .3s ease}
+    .content-wrapper{padding:.5rem;width: calc(100% - 300px);transition:margin-left .3s ease}
     .right-sidebar{padding:.5rem}
     .right-sidebar > div{margin:.5rem auto}
     .right-sidebar .sticky-box{position:sticky;top:3.5rem;width:300px}
