--- a/_includes/sitemap.html
+++ b/_includes/sitemap.html
@@ -1,30 +1,1 @@
-<input type="text" id="filterSitemap" onkeyup="filterSitemap()" placeholder="Search...">
-<div class='table-container hide-on-print'><table id='sitemap'><thead><tr><th>#</th><th>Judul</th><th>Penulis</th><th>Tanggal</th><th>Kategori</th><th>Tags</th></tr></thead><tbody>{% assign counter = 1 %}{% for post in site.posts %}<tr><td>{{ counter }}</td><td><a href='{{ post.url }}' title='{{ post.title }}'>{{ post.title }}</a></td><td>{{ post.author | default: "Unknown" }}</td><td>{{ post.date | date: "%B %d, %Y" }}</td><td>{{ post.categories | join: ", " }}</td><td>{{ post.tags | join: ", " }}</td></tr>{% assign counter = counter | plus: 1 %}{% endfor %}</tbody></table></div>
-<script>
-function filterSitemap() {
-  var input, filter, table, tr, td, i, j, txtValue;
-  input = document.getElementById("filterSitemap");
-  filter = input.value.toUpperCase();
-  table = document.getElementById("sitemap");
-  tr = table.getElementsByTagName("tr");
-
-  // Loop through all table rows (except the header)
-  for (i = 1; i < tr.length; i++) { // Start from 1 to skip the header row
-    var rowVisible = false;
-    td = tr[i].getElementsByTagName("td");
-
-    for (j = 0; j < td.length; j++) {
-      if (td[j]) {
-        txtValue = td[j].textContent || td[j].innerText;
-        if (txtValue.toUpperCase().indexOf(filter) > -1) {
-          rowVisible = true;
-          break; // No need to check other columns if one matches
-        }
-      }
-    }
-
-    // Show or hide the row based on search
-    tr[i].style.display = rowVisible ? "" : "none";
-  }
-}
-</script>
+<div class='table-container hide-on-print'><table id='sitemap'><thead><tr><th>Judul</th><th>Penulis</th><th>Tanggal</th><th>Kategori</th><th>Tags</th></tr></thead><tbody>{% for post in site.posts %}<tr><td><a href='{{ post.url }}' title='{{ post.title }}'>{{ post.title }}</a></td><td>{{ post.author | default: "Unknown" }}</td><td>{{ post.date | date: "%B %d, %Y" }}</td><td>{{ post.categories | join: ", " }}</td><td>{{ post.tags | join: ", " }}</td></tr>{% endfor %}</tbody></table></div>
