--- a/_includes/right-sidebar.html
+++ b/_includes/right-sidebar.html
@@ -1,12 +1,9 @@
 <aside class="right-sidebar">
     <div class='static-box'>
-      <img src='https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEhSh1lk0dfxkwn2yyprbXhD0p-SX-tbI238i6QXPPy96FBO-SDRlY3NkqcjHPmzv6ht6E_qu9de8ubQ1HMxUSRRhsN0Xuzo8fVCKS0wEk63mT1iR8xaiWQ4jpUgKOLQzSZF8yMwOqfGowA/s300-rw/tema.jpg'/>
-    </div>
-    <div class='static-box'>
-      <img src='https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEhSh1lk0dfxkwn2yyprbXhD0p-SX-tbI238i6QXPPy96FBO-SDRlY3NkqcjHPmzv6ht6E_qu9de8ubQ1HMxUSRRhsN0Xuzo8fVCKS0wEk63mT1iR8xaiWQ4jpUgKOLQzSZF8yMwOqfGowA/s300-rw/tema.jpg'/>
+    {% include image.html src='https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEhSh1lk0dfxkwn2yyprbXhD0p-SX-tbI238i6QXPPy96FBO-SDRlY3NkqcjHPmzv6ht6E_qu9de8ubQ1HMxUSRRhsN0Xuzo8fVCKS0wEk63mT1iR8xaiWQ4jpUgKOLQzSZF8yMwOqfGowA/s300-rw/tema.jpg' width='300' height='300' layout='responsive' %}
     </div>
     <div class="sticky-box">
-      <h2>Right Sidebar</h2>
-      <p>This content stays in view as you scroll — on larger screens only.</p>
+      <h2>Kolom Iklan Disini</h2>
+      <p>Di kolom ini kamu bisa memasang iklan banner atau text untuk mempromosikan website-mu atau untuk mendapatkan backlink dari website ASIBUKA Group dan mendongkrak SEO websitemu.</p>
     </div>
   </aside>
