edit amp for homepage

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -22,7 +22,7 @@
         <line x1="21" y1="21" x2="16.65" y2="16.65" stroke="currentColor" stroke-width="2" />
       </svg>
     </label>
-    <div class="darkmode-btn" id="darkToggle" title="Toggle Dark Mode">
+    <div class="darkmode-btn" aria-label="checkbox" on="tap:AMP.setState({visible: !visible})" role="button" tabindex="0" id="darkToggle" title="Toggle Dark Mode">
 <!-- Moon (default for light mode) -->
 <svg class="moon-icon" viewBox="0 0 24 24">
   <path d="M21 12.79A9 9 0 1 1 11.21 3a7 7 0 1 0 9.79 9.79z" fill="none" stroke="currentColor" stroke-width="2"/>
