--- a/_includes/style.css
+++ b/_includes/style.css
@@ -21,6 +21,10 @@
     a{background-color:transparent;-webkit-text-decoration-skip:objects;text-decoration:none;color:var(--theme-color)}
     body.dark a{color:var(--white)}
     a:hover,a:focus,body.dark a:hover,body.dark a:focus{color:var(--grey)}
+    /* Images */
+    amp-img,img{max-width:100%;height:auto;border-style:none;width:100%}
+    body.dark amp-img, body.dark img{filter:brightness(75%)}
+    body.dark amp-img:hover, body.dark img:hover,body.dark amp-img:focus, body.dark img:focus{filter:brightness(100%)}
     /* Header Section */
     header{display:flex;justify-content:space-between;align-items:center;padding:10px 16px;background:var(--white)fffe6;border-bottom:1px solid #ccc;position:sticky;top:0;z-index:1001;backdrop-filter:blur(10px)}
     body.dark header{background:#202020e6;border-color:#444}
