--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -18,7 +18,7 @@
 <body class="light">
 {% include header.html %}
 {% include nav.html %}
-{% include leaderboard_ads.html %}
+{% include html/leaderboard_ads.html %}
 <div class="layout hide-on-print">
 <main aria-label="Main Wrapper" class="content-wrapper hide-on-print" id="content-wrapper">
 {{ content }}
