--- a/_layouts/amp.html
+++ b/_layouts/amp.html
@@ -13,7 +13,7 @@
   <body [class]="visible ? 'dark' : 'light" class='light'>
     {% include header.html %}
     {% include nav.html %}
-    {% include leaderboard_ads.html %}
+    {% include html/leaderboard_ads.html %}
     <div class="layout hide-on-print">
     <main aria-label="Main Wrapper" class="content-wrapper hide-on-print" id="content-wrapper">
     {{ content }}
