--- a/_includes/html/breadcrumb.html
+++ b/_includes/html/breadcrumb.html
@@ -1,5 +1,5 @@
 <nav aria-label="breadcrumb" itemscope itemtype="https://schema.org/BreadcrumbList" class="breadcrumb hide-on-print">
-    <!-- Position 1: Home -->
+    <small><!-- Position 1: Home -->
     <span itemprop="itemListElement" itemscope itemtype="https://schema.org/ListItem">
       <a itemprop="item" href="{{ "/" | absolute_url }}">
         <span itemprop="name">Beranda</span>
@@ -27,4 +27,5 @@
       <span itemprop="name">{{ page.title }}</span>
       <meta itemprop="position" content="{{ pos }}" />
     </span>
+</small>
   </nav>
