--- a/_includes/style.css
+++ b/_includes/style.css
@@ -27,6 +27,8 @@
     body.dark amp-img:hover, body.dark img:hover,body.dark amp-img:focus, body.dark img:focus{filter:brightness(100%)}
     /* Header Section */
     header{display:flex;justify-content:space-between;align-items:center;padding:10px 16px;background:var(--white)fffe6;border-bottom:1px solid var(--white);position:sticky;top:0;z-index:1001;backdrop-filter:blur(10px)}
+    header a svg path{fill:var(--black)}
+    body.dark a svg path{fill:var(--white)}
     body.dark header{background:#202020e6;border-color:var(--grey)}
     .left-section{display:flex;align-items:center;gap:16px}
     .menu-btn{width:24px;height:24px;cursor:pointer;fill:currentColor;display:block}
