--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,6 +1,6 @@
 <input type="checkbox" class='hide-on-print' id="sidebar-toggle">
 <input type="checkbox" class='hide-on-print' id="search-toggle">
-<header class='hide-on-print' itemscope itemtype="https://schema.org/WPHeader">
+<header class='header-wrapper hide-on-print' itemscope itemtype="https://schema.org/WPHeader">
   <div class="left-section" itemscope itemtype="https://schema.org/Organization">
     <label for="sidebar-toggle" class="menu-btn" title="Menu">
       <svg viewBox="0 0 24 24">
