--- a/_includes/style.css
+++ b/_includes/style.css
@@ -31,7 +31,7 @@
     body.dark .header-wrapper a svg path{fill:var(--white)}
     body.dark .header-wrapper{background:#202020e6;border-color:var(--grey)}
     .header-wrapper .left-section{display:flex;align-items:center;gap:16px}
-    .header-wrapper .menu-btn{width:24px;height:24px;cursor:pointer;fill:currentColor;display:block}
+    .header-wrapper .menu-btn{width:24px;height:24px;cursor:pointer;fill:currentColor;display:hidden}
     .header-wrapper .logo{font-weight:700;font-size:18px;text-decoration:none;color:inherit}
     .header-wrapper .center-section{flex:1;display:flex;justify-content:center;max-width:500px}
     .search-bar{display:flex;flex:1;border:1px solid #ccc;border-radius:20px;overflow:hidden;background:var(--white);transition:all .3s ease}
@@ -86,12 +86,12 @@
     .lazy.loaded{transform:scale(1,1);opacity:1}
     /* Media Queries */
     @media (min-width:769px){
-    .menu-btn{display:none}
     .sidebar{left:0}
     .overlay{display:none}
     .layout,.one-column-wrapper{margin-left:240px}
     }
     @media (max-width:768px){
+    .menu-btn{display:block}
     .search-bar{display:none}
     #search-toggle:checked ~ header .center-section .search-bar{display:flex;position:absolute;left:0;top:0;width:100%;height:100%;border-radius:0;z-index:1002}
     .search-toggle-label{display:inline-block}
