--- a/_includes/style.css
+++ b/_includes/style.css
@@ -22,7 +22,7 @@
     body.dark a{color:var(--white)}
     a:hover,a:focus,body.dark a:hover,body.dark a:focus{color:var(--grey)}
     /* Images */
-    {% if page.url contains '/amp/' %}amp-img{% else %}img{% endif %}{max-width:100%;height:auto;border-style:none;width:100%}
+    {% if page.url contains '/amp/' %}amp-img{% else %}img{% endif %}{border-style:none}
     {% if page.url contains '/amp/' %}body.dark amp-img{% else %}body.dark img{% endif %}{filter:brightness(75%)}
     {% if page.url contains '/amp/' %}body.dark amp-img:hover,body.dark amp-img:focus{% else %}body.dark img:hover,body.dark img:focus{% endif %}{filter:brightness(100%)}
     /* Header Section */
