--- a/_includes/header.html
+++ b/_includes/header.html
@@ -10,10 +10,10 @@
     <a href="https://asibuka.com" title="ASIBUKA Group" itemprop="url" class="logo"><span itemprop="name">ASIBUKA Group</span></a>
   </div>
   <div class="center-section">
-    <div class="search-bar">
-      <input type="text" placeholder="Search" />
-      <button>🔍</button>
-    </div>
+    <form action="/search" method="GET"  class="search-bar">
+      <input type="text" name="q" placeholder="Search" />
+      <button type="submit">🔍</button>
+    </form>
   </div>
   <div class="right-section">
     <label for="search-toggle" class="search-toggle-label" title="Search">
