--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -3,7 +3,7 @@
 <head>
   {% include meta.html %}
   <style>{% include style.css %}</style>
-  {% include head/json-homepage.html %}
+  {% include html/json-homepage.html %}
   {% include script-head.js %}
 </head>
 <body class="light">
