--- a/_includes/header.html
+++ b/_includes/header.html
@@ -11,7 +11,7 @@
   </div>
   <div class="center-section">
     <form action="/search" method="GET"  class="search-bar">
-      <input type="text" name="q" placeholder="Search" />
+      <input type="text" name="q" id='search-box' placeholder="Search" />
       <button type="submit">🔍</button>
     </form>
   </div>
