--- a/_includes/header.html
+++ b/_includes/header.html
@@ -10,7 +10,7 @@
     <a href="https://asibuka.com" title="ASIBUKA Group" itemprop="url" class="logo"><span itemprop="name">ASIBUKA Group</span></a>
   </div>
   <div class="center-section">
-    <form action="/search" method="GET" target="_parent" class="search-bar">
+    <form action="/search" method="GET" target="_self" class="search-bar">
       <input type="text" name="q" id='search-box' placeholder="Search" />
       <button type="submit">🔍</button>
     </form>
