--- a/_includes/style.css
+++ b/_includes/style.css
@@ -81,7 +81,7 @@ body.dark .sidebar-section{border-color:#444}
 body.dark .sidebar-footer{border-color:#444;color:#aaa}
 #sidebar-toggle:checked ~ .sidebar{left:0}
 #sidebar-toggle:checked ~ .overlay{display:block}
-.overlay,.search-overlay{display:none;position:fixed;top:0;left:0;right:0;bottom:0;background:var(--black)00080;z-index:999}
+.overlay,.search-overlay{display:none;position:fixed;top:0;left:0;right:0;bottom:0;background:rgba(0,0,0,0.6);z-index:999}
 /* Content Layout */
 .layout{display:flex;flex-direction:row;min-height:100vh}
 .content-wrapper{padding:.5rem;width: calc(100% - 300px);transition:margin-left .3s ease}
@@ -112,5 +112,5 @@ body.dark .sidebar-footer{border-color:#444;color:#aaa}
 }
 .lazy{opacity:0;transform:scale(0.98);transition:opacity .6s ease-out,transform .6s ease-out}
 .lazy.loaded{opacity:1;transform:scale(1)}
-{% include css/styling.css %}
+{% include css/styling.css %}{% include css/layout.css %}
 {% if content contains "<h2" %}.toc{background:#f8f9fa;padding:15px;border-left:4px solid #004aad;margin-bottom:20px;transition:background 0.3s,color .3s}.toc h2{font-size:1.2rem;margin-bottom:10px}.toc ul{list-style:none;padding-left:15px}.toc ul li{margin-bottom:5px}.toc ul ul{padding-left:15px;font-size:.9rem}.dark-mode .toc{background:#1e1e1e;color:#f8f9fa;border-left:4px solid #0af}.dark-mode .toc h2{color:#f8f9fa}.dark-mode .toc ul li{color:#ddd}.dark-mode .toc a{color:#0af}.dark-mode .toc a:hover{color:#fa0}{% endif %}
